added docker support

--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,9 @@
         <vaadin-chartjs.version>0.4.0</vaadin-chartjs.version>
         <viritin.version>1.61</viritin.version>
         <lombok.version>1.16.14</lombok.version>
+
+        <docker.image.prefix>rocketbaseio</docker.image.prefix>
+
     </properties>
 
     <repositories>
@@ -152,6 +155,23 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>com.spotify</groupId>
+                <artifactId>docker-maven-plugin</artifactId>
+                <version>0.4.13</version>
+                <configuration>
+                    <imageName>${docker.image.prefix}/${project.artifactId}</imageName>
+                    <dockerDirectory>src/main/docker</dockerDirectory>
+                    <resources>
+                        <resource>
+                            <targetPath>/</targetPath>
+                            <directory>${project.build.directory}</directory>
+                            <include>${project.build.finalName}.jar</include>
+                        </resource>
+                    </resources>
+                </configuration>
             </plugin>
         </plugins>
     </build>
