--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,4 @@
-spring.data.mongodb.host=localhost
-spring.data.mongodb.database=toggl-report
-spring.data.mongodb.port=27017
+spring.data.mongodb.uri=mongodb://localhost/toggl-report
 
 application.title=Toggl Reporter
 
