--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>io.rocketbase.toggl</groupId>
     <artifactId>toggl-reporter</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>toggl-reporter</name>
@@ -33,6 +33,14 @@
         <docker.image.prefix>rocketbaseio</docker.image.prefix>
 
     </properties>
+
+
+    <scm>
+        <connection>scm:git:git@github.com:rocketbase-io/toggl-reporter.git</connection>
+        <developerConnection>scm:git:git@github.com:rocketbase-io/toggl-reporter.git</developerConnection>
+        <url>https://github.com/rocketbase-io/toggl-reporter.git</url>
+        <tag>HEAD</tag>
+    </scm>
 
     <repositories>
         <repository>
