--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.rocketbase.toggl</groupId>
@@ -13,8 +14,8 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.2.RELEASE</version>
-        <relativePath /> <!-- lookup parent from repository -->
+        <version>1.5.3.RELEASE</version>
+        <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
     <properties>
@@ -24,12 +25,11 @@
         <maven.javadoc.failOnError>false</maven.javadoc.failOnError>
 
         <vaadin.widgetset.mode>local</vaadin.widgetset.mode>
-        <vaadin.version>7.7.7</vaadin.version>
+        <vaadin.version>7.7.8</vaadin.version>
         <jtoggl.version>jtoggl-api-8.0.0</jtoggl.version>
         <toggl-report-api.version>toggl-report-api-1.0.1</toggl-report-api.version>
         <vaadin-chartjs.version>0.4.0</vaadin-chartjs.version>
         <viritin.version>1.61</viritin.version>
-        <lombok.version>1.16.14</lombok.version>
 
 
         <docker.image.prefix>rocketbaseio</docker.image.prefix>
@@ -105,7 +105,6 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>${lombok.version}</version>
         </dependency>
 
         <dependency>
