--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.rocketbase.toggl</groupId>
     <artifactId>toggl-reporter</artifactId>
-    <version>1.0.4-SNAPSHOT</version>
+    <version>1.0.5-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>toggl-reporter</name>
@@ -44,7 +44,7 @@
         <connection>scm:git:git@github.com:rocketbase-io/toggl-reporter.git</connection>
         <developerConnection>scm:git:git@github.com:rocketbase-io/toggl-reporter.git</developerConnection>
         <url>https://github.com/rocketbase-io/toggl-reporter.git</url>
-        <tag>HEAD</tag>
+        <tag>toggl-reporter-1.0.4</tag>
     </scm>
 
     <repositories>
