--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>io.rocketbase.toggl</groupId>
     <artifactId>toggl-reporter</artifactId>
-    <version>1.0.7-SNAPSHOT</version>
+    <version>1.1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>toggl-reporter</name>
@@ -14,7 +14,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.6.RELEASE</version>
+        <version>1.5.9.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -24,13 +24,13 @@
         <java.version>1.8</java.version>
         <maven.javadoc.failOnError>false</maven.javadoc.failOnError>
 
-        <vaadin.version>8.1.1</vaadin.version>
-        <vaadin-spring-boot.version>2.0.1</vaadin-spring-boot.version>
-        <viritin.version>2.0.beta2</viritin.version>
+        <vaadin.version>8.2.1</vaadin.version>
+        <vaadin-spring-boot.version>3.0.0</vaadin-spring-boot.version>
+        <viritin.version>2.1</viritin.version>
 
         <jtoggl.version>jtoggl-api-8.0.0</jtoggl.version>
         <toggl-report-api.version>toggl-report-api-1.0.1</toggl-report-api.version>
-        <vaadin-chartjs.version>1.0.0</vaadin-chartjs.version>
+        <vaadin-chartjs.version>1.1.1</vaadin-chartjs.version>
 
         <jollyday.version>0.5.2</jollyday.version>
         <jgravatar.version>1.1</jgravatar.version>
@@ -44,7 +44,6 @@
         <connection>scm:git:git@github.com:rocketbase-io/toggl-reporter.git</connection>
         <developerConnection>scm:git:git@github.com:rocketbase-io/toggl-reporter.git</developerConnection>
         <url>https://github.com/rocketbase-io/toggl-reporter.git</url>
-        <tag>toggl-reporter-1.0.4</tag>
     </scm>
 
     <repositories>
