--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>io.rocketbase.toggl</groupId>
     <artifactId>toggl-reporter</artifactId>
-    <version>1.1.0-SNAPSHOT</version>
+    <version>1.1.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>toggl-reporter</name>
@@ -37,6 +37,7 @@
 
         <docker.image.prefix>rocketbaseio</docker.image.prefix>
 
+        <dockerfile-maven-plugin.version>1.3.7</dockerfile-maven-plugin.version>
     </properties>
 
 
@@ -44,6 +45,7 @@
         <connection>scm:git:git@github.com:rocketbase-io/toggl-reporter.git</connection>
         <developerConnection>scm:git:git@github.com:rocketbase-io/toggl-reporter.git</developerConnection>
         <url>https://github.com/rocketbase-io/toggl-reporter.git</url>
+        <tag>HEAD</tag>
     </scm>
 
     <repositories>
@@ -160,27 +162,46 @@
 
     </dependencies>
 
+
     <build>
+
+        <extensions>
+            <extension>
+                <groupId>com.spotify</groupId>
+                <artifactId>dockerfile-maven-extension</artifactId>
+                <version>${dockerfile-maven-plugin.version}</version>
+            </extension>
+        </extensions>
+
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
 
+
             <plugin>
                 <groupId>com.spotify</groupId>
-                <artifactId>docker-maven-plugin</artifactId>
-                <version>0.4.13</version>
+                <artifactId>dockerfile-maven-plugin</artifactId>
+                <version>${dockerfile-maven-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <id>default</id>
+                        <goals>
+                            <goal>push</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
-                    <imageName>${docker.image.prefix}/${project.artifactId}</imageName>
-                    <dockerDirectory>src/main/docker</dockerDirectory>
-                    <resources>
-                        <resource>
-                            <targetPath>/</targetPath>
-                            <directory>${project.build.directory}</directory>
-                            <include>${project.build.finalName}.jar</include>
-                        </resource>
-                    </resources>
+                    <repository>rocketbaseio/toggl-reporter</repository>
+                    <tags>
+                        <tag>${project.version}</tag>
+                        <tag>latest</tag>
+                    </tags>
+                    <buildArgs>
+                        <JAR_FILE>${project.build.finalName}.jar</JAR_FILE>
+                    </buildArgs>
+                    <useMavenSettingsForAuth>true</useMavenSettingsForAuth>
                 </configuration>
             </plugin>
 
